force-app/main/default/objects/PushTopicCustom__c/PushTopicCustom__c.object-meta.xml
<CustomObject>
    <label>Push Topic Custom</label>
    <nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>Push Topic Custom Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Push Topic Custom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>