force-app/main/default/objects/PushTopicCustom__c/fields/ButtonNumber__c.field-meta.xml
<CustomField>
    <fullName>ButtonNumber__c</fullName>
    <label>Button Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>one</fullName>
            </value>
            <value>
                <fullName>two</fullName>
            </value>
            <value>
                <fullName>three</fullName>
            </value>
            <value>
                <fullName>four</fullName>
            </value>
            <value>
                <fullName>five</fullName>
            </value>
            <value>
                <fullName>six</fullName>
            </value>
            <value>
                <fullName>seven</fullName>
            </value>
            <value>
                <fullName>eight</fullName>
            </value>
            <value>
                <fullName>nine</fullName>
            </value>
            <value>
                <fullName>zero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>