force-app/main/default/objects/PushTopicCustom__c/fields/Tied__c.field-meta.xml
<CustomField>
    <fullName>Tied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tied</label>
    <type>Checkbox</type>
</CustomField>